Fixed bug #38536 (SOAP returns an array of values instead of an object)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@222990 c90b9560-bf6c-de11-be94-00142212c4b1